# voice_interaction

./: README.md
baidu_speech/: README.md
baidu_speech/launch/: Chat_Robot.launch  simple_speaker.launch  simple_voice.launch  voice_speech.launch  warning_speaker.launch
baidu_speech/scripts/: Chat_Robot.py  baidu_tts.py  voice_node.py
pocketsphinx/: README.md
pocketsphinx/deb/: pocketsphinx-hmm-zh-tdt_0.8-5_all.deb  pocketsphinx-lm-zh-hans-gigatdt_0.8-5_all.deb
pocketsphinx/launch/: robocup.launch
pocketsphinx/scripts/: recognizer.py
ros_aiml/launch/: start_chat.launch  start_speech_chat.launch  start_tts_chat.launch
ros_aiml/scripts/: aiml_client.py  aiml_server.py  aiml_speech_recog_client.py  aiml_tts_client.py
snowboy_ros/: CMakeLists.txt  package.xml
snowboy_ros/snowboy/resources/models/: HG.pmdl
xf_voice/: CMakeLists.txt  package.xml
xf_voice/include/aiui_package/: aiui_semantic.h
xf_voice/include/voice_msgs/: aiui_server.h  aiui_serverRequest.h  aiui_serverResponse.h  collect.h  collectRequest.h  collectResponse.h  ss_server.h  ss_serverRequest.h  ss_serverResponse.h
xf_voice/launch/: aiui_semantic.launch  audio_collect.launch  speech_synthesis.launch  voice_apply.launch
xf_voice/src/: aiui_semantic.cpp  audio_capture.cpp  audio_collect.cpp  audio_work.cpp  iat_publish.cpp  linuxrec.c  speech_recognizer.c  tts_subscribe.cpp  tts_test.cpp  vad.cpp  voice_apply.cpp  voice_assistant.cpp
